# x-IMU3-Software-Test

./: CMakeLists.txt  README.md  WindowsInstaller.iss  setup.py  sort_includes.py  version.py
.github/workflows/: main.yml
Examples/Rust/: Cargo.toml
x-IMU3-API/CSharp/x-IMU3/: AssemblyInfo.cpp
x-IMU3-API/Python/: setup.py
x-IMU3-API/Python/Python-C-API/: Connection.h
x-IMU3-API/Rust/: Cargo.toml  Cross.toml
x-IMU3-API/Rust/.cargo/: config.toml
x-IMU3-Bootloader/: CMakeLists.txt  Ximu3Bootloader.c  Ximu3Bootloader.h
x-IMU3-Bootloader-Test/: CMakeLists.txt  main.cpp  upload.bat
x-IMU3-GUI/: CMakeLists.txt
x-IMU3-GUI/Source/: CustomLookAndFeel.cpp  CustomLookAndFeel.h  DevicePanelContainer.cpp  DevicePanelContainer.h  MainComponent.h
x-IMU3-GUI/Source/DevicePanel/: DevicePanel.cpp  DevicePanel.h  DevicePanelHeader.cpp
x-IMU3-GUI/Source/Dialogs/: AboutDialog.h  SendingCommandDialog.h  UpdateFirmwareDialog.cpp  UpdateFirmwareDialog.h  UpdateFirmwareProcessDialog.cpp  UpdateFirmwareProcessDialog.h
x-IMU3-GUI/Source/Firmware/: Firmware.h  x-IMU3-Firmware-v0.6.hex
x-IMU3-GUI/Source/MenuStrip/: MenuStrip.cpp  MenuStrip.h
x-IMU3-GUI/Source/OpenGL/: Buffer.cpp  Buffer.h  GLRenderer.cpp  GLRenderer.h  GLUtil.hpp  Graph.cpp  Graph.h  GraphDataBuffer.h  Model.cpp  NewGraph.cpp  NewGraph.h  OpenGLComponent.cpp  OpenGLComponent.h  OrbitCamera.h  ThreeDView.cpp  ThreeDView.h  WavefrontObjFile.h  WorldGrid3D.cpp  WorldGrid3D.h
x-IMU3-GUI/Source/Widgets/: DiscoveredDevicesTable.cpp  SerialAccessoryTerminal.h
x-IMU3-GUI/Source/Windows/: ThreeDViewWindow.cpp  (+2 more)
(+267 files in other folders)
